[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Level2/Assets/crazy_guy.png" type="Texture" id=1]
[ext_resource path="res://Fonts/mainmenufont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Level2/Assets/crazy_guy.gd" type="Script" id=3]
[ext_resource path="res://Music and Sounds/paper_01.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 3 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 20 )

[sub_resource type="Animation" id=4]
resource_name = "show_text"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="crazy_guy" type="Sprite"]
position = Vector2( 0, -6 )
texture = ExtResource( 1 )
hframes = 4
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 13 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -16.0
margin_top = -24.0
margin_right = 809.0
margin_bottom = 237.0
rect_scale = Vector2( 0.04, 0.04 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Klik op E om te praten."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/show_text = SubResource( 4 )

[node name="Paper" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
